Fix scrolling issue on mobile due to sizing

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@
 
 body {
     overflow-x: hidden;    
-    height: 100vh;           
+    height: 100svh; 
+    top: 1px;          
     margin: 0;
     padding: 0;
     text-align: center;
